<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.flagquizapp.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainFragment">

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/main_subtitle"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/main_title"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
            app:layout_constraintStart_toStartOf="@+id/tv_subtitle" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnPlayQuiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:onClick="@{() -> viewModel.btnNavigateToPlayActivity()}"
                android:text="@string/btn_playquiz"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/btnPractice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:onClick="@{() -> viewModel.btnNavigatePracticeFragmentClicked()}"
                android:text="@string/btn_practice"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/btnHighscore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="@{() -> viewModel.btnNavigateHighscoreFragmentClicked()}"
                android:text="@string/btn_highscores"
                android:textColor="@color/blue" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="268dp"
            android:layout_height="252dp"
            android:layout_marginTop="-160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/globe" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>